<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.Guest.LoginActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.Guest.LoginActivity"
        tools:showIn="@layout/activity_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/carRentalAppName"
            android:id="@+id/carRentalMainTitle"
            android:layout_gravity="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/bigLogoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon128"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/emailLabel"
            android:id="@+id/emailTextField"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordLabel"
            android:fontFamily="sans-serif"
            android:ems="10"
            android:id="@+id/paswordTextField" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginLabel"
            android:id="@+id/loginButton" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_connection_parameters"
                android:id="@+id/changeConnectionSettingsButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createAccountLabel"
                android:id="@+id/createAccountButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browseOnlyLabel"
                android:id="@+id/browseOnlyButton" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
