<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vehiclerental.activities.Staff.SearchVehicleActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/search_vehicles_by_type"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleTypePicker"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:id="@+id/nearest_branch_separator"
        android:background="#8f8f8f"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/or_by_registration_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registrationNumberField"
        android:hint="@string/registration_number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:gravity="center|bottom"
        android:orientation="vertical" >


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchVehiclesButton"
            android:text="@string/search_vehicles" />

    </LinearLayout>
</LinearLayout>
